--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 
     <div id="app"></div>
 
-    <script src="bundle.js"></script>
+    <script src="javascript/client.js"></script>
   </body>
 </html>
