--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Img</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="vendor/css/font-awesome.min.css">
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
