Use BrowserHistory instead of HashHistory.

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
   <head>
     <title>Img</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="vendor/css/font-awesome.min.css">
-    <link href="css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/css/font-awesome.min.css">
+    <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
     
 
     <div id="app"></div>
 
-    <script src="javascript/client.js"></script>
+    <script src="/javascript/client.js"></script>
   </body>
 </html>
