--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <html>
   <head>
-    <title>Img</title>
+    <title>images</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/vendor/css/font-awesome.min.css">
     <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-
     <script src="/javascript/client.js"></script>
   </body>
 </html>
