--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/vendor/javascript/dll.vendor.js"></script>
     <script src="/javascript/client.js"></script>
   </body>
 </html>
