Fix issues for typescript

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/vendor/javascript/dll.vendor.js"></script>
-    <script src="/javascript/client.js"></script>
+    <script src="/javascript/bundle.js"></script>
   </body>
 </html>
