--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/vendor/javascript/react.min.js"></script>
+    <script src="/vendor/javascript/react-router.min.js"></script>
+    <script src="/vendor/javascript/react-dom.min.js"></script>
+    <script src="/vendor/javascript/jquery.min.js"></script>
+    <script src="/vendor/javascript/moment.min.js"></script>
     <script src="/javascript/bundle.js"></script>
   </body>
 </html>
