Extend Build for Redux

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,8 @@
     <script src="/vendor/javascript/react.min.js"></script>
     <script src="/vendor/javascript/react-router.min.js"></script>
     <script src="/vendor/javascript/react-dom.min.js"></script>
+    <script src="/vendor/javascript/redux.min.js"></script>
+    <script src="/vendor/javascript/react-redux.min.js"></script>
     <script src="/vendor/javascript/jquery.min.js"></script>
     <script src="/vendor/javascript/moment.min.js"></script>
     <script src="/javascript/bundle.js"></script>
